# tiago_dual_description_calibration

./: CHANGELOG.rst  CMakeLists.txt  package.xml
urdf/calibration/: calibration_constants.urdf.xacro  extrinsic_camera_calibration_constants.urdf.xacro
