<?xml version="1.0"?>
<package>

  <name>tiago_dual_description_calibration</name>
  <version>0.0.9</version>
  <description>This package contains the description of the hand-eye calibration of the TIAGO dual robot.  The files in this package are used also from the tiago_dual_description package.</description>
  <maintainer email="alessandro.difava@pal-robotics.com">Alessandro Di Fava</maintainer>
  <maintainer email="jordi.pages@pal-robotics.com">Jordi Pages</maintainer>
  <maintainer email="hilario.tome@pal-robotics.com">Hilario Tome</maintainer>
  <license>Creative Commons BY-NC-ND 3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>xacro</run_depend>

  <export>
    <pal_configuration_pkg/>
  </export>
</package>
